조회수 0 ~ 4 초기 단계 타이틀 수정

--- a/src/main/resources/static/css/job-posting.css
+++ b/src/main/resources/static/css/job-posting.css
@@ -50,21 +50,21 @@
 
 /* 카드 제목 */
 .job-card .title {
-    font-size: 1.2em; /* 적당한 크기로 조정 */
-    font-weight: bold; /* 굵은 글씨 */
-    margin: 30px 0 10px; /* 간격 조정 */
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 30px 0 5px; /* 간격 줄이기 */
     text-align: center;
-    color: #333; /* 제목 색상 */
+    color: #333;
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap; /* 한 줄로 제한 */
+    white-space: nowrap;
 }
 
 /* 카드 회사명 */
 .job-card .company {
     font-size: 1em;
     color: #555;
-    margin: 10px 0; /* 위아래 여백 조정 */
+    margin: -4px 0; /* 위아래 간격 줄이기 */
     text-align: center;
 }
 
@@ -74,14 +74,15 @@
     color: #777;
     margin: 4px 0;
     text-align: center;
+    position: relative; /* 위치 조정 가능 */
 }
 
-/* 카드 설명 */
 .job-card .description {
-    font-size: 0.8em;
-    color: #999; /* 더 연한 색 */
-    margin: 10px 0 0;
-    text-align: center;
+    font-size: 1.5em; /* 크기 키움 */
+    font-weight: bold; /* 글자 진하게 */
+    color: #000; /* 검정색으로 변경 */
+    text-align: center; /* 가운데 정렬 */
+    margin: 3px 0; /* 위아래 여백 추가 */
 }
 
 /* 반응형 레이아웃 */
