--- a/src/main/resources/static/css/job-posting.css
+++ b/src/main/resources/static/css/job-posting.css
@@ -52,7 +52,7 @@
 .job-card .title {
     font-size: 1.2em;
     font-weight: bold;
-    margin: 30px 0 5px; /* 간격 줄이기 */
+    margin: 10px 0 5px; /* 간격 줄이기 */
     text-align: center;
     color: #333;
     overflow: hidden;
@@ -64,7 +64,7 @@
 .job-card .company {
     font-size: 1em;
     color: #555;
-    margin: -4px 0; /* 위아래 간격 줄이기 */
+    margin: -4px 0; /* 위아래 간격 조정 */
     text-align: center;
 }
 
@@ -77,12 +77,12 @@
     position: relative; /* 위치 조정 가능 */
 }
 
+/* 카드 설명 */
 .job-card .description {
-    font-size: 1.5em; /* 크기 키움 */
-    font-weight: bold; /* 글자 진하게 */
-    color: #000; /* 검정색으로 변경 */
-    text-align: center; /* 가운데 정렬 */
-    margin: 3px 0; /* 위아래 여백 추가 */
+    font-size: 0.9em;
+    color: #777;
+    margin: 5px 0; /* 위아래 간격 조정 */
+    text-align: center;
 }
 
 /* 반응형 레이아웃 */
