카드 크기에 따라 글 위치 수정

--- a/src/main/resources/static/css/job-posting.css
+++ b/src/main/resources/static/css/job-posting.css
@@ -72,7 +72,8 @@
 .job-card .location {
     font-size: 0.9em;
     color: #777;
-    margin: 4px 0;
+    /*margin: 4px 0;*/
+    margin: 2px 0;
     text-align: center;
     position: relative; /* 위치 조정 가능 */
 }
@@ -81,7 +82,8 @@
 .job-card .description {
     font-size: 0.9em;
     color: #777;
-    margin: 5px 0; /* 위아래 간격 조정 */
+    /*margin: 5px 0; !* 위아래 간격 조정 *!*/
+    margin: 2px 0; /* 위아래 간격 조정 */
     text-align: center;
 }
 
